--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "@types/node": "^13.11.1",
-    "ts-node": "^8.8.2",
-    "typescript": "^3.8.3"
+    "@types/node": "^18.6.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "big-json": "^3.1.0"
+  }
 }
