--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
   },
   "devDependencies": {
     "@types/node": "^18.6.1",
+    "chrome-devtools-frontend": "^1.0.1070764",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "big-json": "^3.1.0"
-  }
+  "dependencies": {}
 }
