--- a/package.json
+++ b/package.json
@@ -5,16 +5,28 @@
   "main": "index.js",
   "scripts": {
     "start": "node --require ts-node/register --max-old-space-size=8192 --stack-size=160000000 src/cleaner.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
+    "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|jsx|ts|tsx|json)\"",
+    "prebuild": "rimraf dist",
+    "build": "tsc -p tsconfig.json && tsc -p tsconfig-cjs.json",
+    "prepare": "npm run build"
   },
   "devDependencies": {
-    "@types/node": "^18.6.1",
+    "@types/node": "18.15.0",
+    "@typescript-eslint/eslint-plugin": "5.54.1",
+    "@typescript-eslint/parser": "5.54.1",
     "chrome-devtools-frontend": "^1.0.1070764",
+    "eslint": "8.35.0",
+    "eslint-config-prettier": "8.7.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-sonarjs": "0.18.0",
+    "prettier": "2.8.4",
+    "rimraf": "^4.4.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {}
+  "license": "ISC"
 }
