--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "heap-cleaner",
   "version": "1.0.0",
   "description": "",
-  "bin": "./dist/cjs/cleaner.js",
+  "bin": {
+    "heap-cleaner": "./dist/cjs/cleaner.js"
+  },
   "scripts": {
     "start": "node --require ts-node/register --max-old-space-size=8192 --stack-size=160000000 src/cleaner.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|jsx|ts|tsx|json)\"",
     "prebuild": "rimraf dist",
-    "build": "tsc -p tsconfig.json && tsc -p tsconfig-cjs.json",
-    "prepare": "npm run build"
+    "build": "tsc -p tsconfig.json && tsc -p tsconfig-cjs.json"
   },
   "devDependencies": {
     "@types/node": "18.15.0",
