--- a/tsconfig-cjs.json
+++ b/tsconfig-cjs.json
@@ -2,6 +2,8 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "module": "commonjs",
-    "outDir": "dist/cjs"
+    "outDir": "dist/cjs",
+    "sourceMap": false,
+    "declaration": false
   }
 }
