--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "bin": {
-    "heap-cleaner": "./dist/cjs/cleaner.js"
+    "heap-cleaner": "./dist/cleaner.js"
   },
   "scripts": {
-    "start": "node --require ts-node/register --max-old-space-size=8192 --stack-size=160000000 src/cleaner.ts",
+    "start": "node --require ts-node/register --max-old-space-size=32768 --stack-size=320000000 src/cleaner.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|jsx|ts|tsx|json)\"",
     "prebuild": "rimraf dist",
-    "build": "tsc -p tsconfig.json && tsc -p tsconfig-cjs.json"
+    "build": "tsc"
   },
   "devDependencies": {
     "@types/node": "18.15.0",
@@ -26,6 +26,9 @@
     "rimraf": "^4.4.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
+  },
+  "engines": {
+    "node": ">=16"
   },
   "keywords": [],
   "author": "",
