Simplify bin command

--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "heap-cleaner",
   "version": "1.0.0",
   "description": "",
-  "bin": {
-    "heap-cleaner": "./dist/cleaner.js"
-  },
+  "bin": "./dist/cleaner.js",
   "scripts": {
     "start": "node --require ts-node/register --max-old-space-size=32768 --stack-size=320000000 src/cleaner.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
