Ability to load huge heap snapshot files, fixes to heap format changes (#4)
* using chromium devtools to load and parse heap snapshot
  * ability to load all heap snapshot files (stream json and similar solution are not able to load files bigger than cca 500MB)
  * there is a post processing in devtools to propagate detached DOM state
* relying on fixed indexes (and sizes) in heap snapshot format is not future proof. Format can change (adding more node/edge types, adding more node/edge fields, etc.) - using metadata in snapshot to properly index and navigate in arrays
* removing WeakMap references
* added renovate config, lint, prettier and building
* added bin field to package.json - making it proper CLI tool
* removing Maps as there is a limit on their size https://stackoverflow.com/a/54466812

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,7 @@
 {
+  "extends": "./tsconfig-base.json",
   "compilerOptions": {
     "module": "commonjs",
-    "target": "es2015",
-    "sourceMap": true
-  },
-  "exclude": [
-    "node_modules"
-  ]
+    "outDir": "dist/cjs"
+  }
 }
