--- a/package.json
+++ b/package.json
@@ -2,15 +2,49 @@
   "name": "heap-cleaner",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/cjs/src/index-cjs.js",
+  "module": "./dist/mjs/index.js",
+  "types": "./dist/mjs/index.d.ts",
+  "bin": "./dist/cjs/bin.js",
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./dist/mjs/index.d.ts",
+        "default": "./dist/mjs/index.js"
+      },
+      "require": {
+        "types": "./dist/cjs/src/index.d.ts",
+        "default": "./dist/cjs/src/index-cjs.js"
+      }
+    }
+  },
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "start": "node --require ts-node/register --max-old-space-size=8192 --stack-size=160000000 src/cleaner.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node --require ts-node/register --max-old-space-size=32768 --stack-size=320000000 src/bin.ts",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
+    "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|jsx|ts|tsx|json)\"",
+    "prebuild": "rimraf dist",
+    "build": "tsc -p tsconfig.json && tsc -p tsconfig-esm.json"
   },
   "devDependencies": {
-    "@types/node": "^13.11.1",
-    "ts-node": "^8.8.2",
-    "typescript": "^3.8.3"
+    "@types/node": "18.15.0",
+    "@typescript-eslint/eslint-plugin": "5.54.1",
+    "@typescript-eslint/parser": "5.54.1",
+    "chrome-devtools-frontend": "^1.0.1070764",
+    "eslint": "8.35.0",
+    "eslint-config-prettier": "8.7.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-sonarjs": "0.18.0",
+    "prettier": "2.8.4",
+    "rimraf": "4.4.0",
+    "ts-node": "10.9.1",
+    "typescript": "4.7.4"
+  },
+  "engines": {
+    "node": ">=16"
   },
   "keywords": [],
   "author": "",
