Output for multiple detached windows

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -5,7 +5,7 @@
   "semi": false,
   "singleQuote": true,
   "jsxSingleQuote": false,
-  "jsxBracketSameLine": false,
+  "bracketSameLine": false,
   "bracketSpacing": true,
   "printWidth": 120,
   "quoteProps": "consistent",
