--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "dist"
   ],
   "scripts": {
-    "start": "node --require ts-node/register --max-old-space-size=32768 --stack-size=320000000 src/bin.ts",
+    "start": "node --require ts-node/register --max-old-space-size=32768 src/bin.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|jsx|ts|tsx|json)\"",
