--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "heap-cleaner",
   "version": "1.3.0",
   "description": "",
-  "main": "./dist/cjs/src/index-cjs.js",
+  "main": "./dist/cjs/index-cjs.js",
   "module": "./dist/mjs/index.js",
   "types": "./dist/mjs/index.d.ts",
   "bin": "./dist/cjs/bin.js",
@@ -13,8 +13,8 @@
         "default": "./dist/mjs/index.js"
       },
       "require": {
-        "types": "./dist/cjs/src/index.d.ts",
-        "default": "./dist/cjs/src/index-cjs.js"
+        "types": "./dist/cjs/index.d.ts",
+        "default": "./dist/cjs/index-cjs.js"
       }
     }
   },
